--- a/ChangeLog
+++ b/ChangeLog
@@ -3,7 +3,7 @@
 ###
 
 Release 2.11.0 (2025-07-09 by jmr)
-    - MacPorts now requires Mac OS X 10.5 or later.
+    - MacPorts now (officially) requires Mac OS X 10.5 or later.
 
     - 'port reclaim' now has an option to keep unrequested ports that
       are build-time dependencies of requested ports.
